@@ -73,7 +73,7 @@ class TimeAxis implements RrdGraphConstants {
     private void drawMinor() {
         if (!gdef.noMinorGrid) {
             adjustStartingTime(tickSetting.minorUnit, tickSetting.minorUnitCount);
-            Paint color = gdef.colors[COLOR_GRID];
+            Paint color = gdef.getColor(ElementsNames.grid);
             int y0 = im.yorigin, y1 = y0 - im.ysize;
             for (int status = getTimeShift(); status <= 0; status = getTimeShift()) {
                 if (status == 0) {
@@ -89,7 +89,7 @@ class TimeAxis implements RrdGraphConstants {
 
     private void drawMajor() {
         adjustStartingTime(tickSetting.majorUnit, tickSetting.majorUnitCount);
-        Paint color = gdef.colors[COLOR_MGRID];
+        Paint color = gdef.getColor(ElementsNames.mgrid);
         int y0 = im.yorigin, y1 = y0 - im.ysize;
         for (int status = getTimeShift(); status <= 0; status = getTimeShift()) {
             if (status == 0) {
@@ -104,7 +104,7 @@ class TimeAxis implements RrdGraphConstants {
 
     private void drawLabels() {
         Font font = gdef.getFont(FONTTAG_AXIS);
-        Paint color = gdef.colors[COLOR_FONT];
+        Paint color = gdef.getColor(ElementsNames.font);
         adjustStartingTime(tickSetting.labelUnit, tickSetting.labelUnitCount);
         int y = im.yorigin + (int) worker.getFontHeight(font) + 2;
         for (int status = getTimeShift(); status <= 0; status = getTimeShift()) {
